@@ -1,5 +1,9 @@
 ViTables ChangeLog
 ==================
+** November 13, 2009 **
+dataSheet.py module has been refactored. Circular references have been removed.
+
+Fixed a bug in the Preferences dialog.
 ** November 10, 2009 **
 Fixed a bug in the Preferences dialog.
 
